# Hodl-Monster

./: .gitignore  HodlMonster.sol  README.md  config.json  main.py  openapi.yaml  pyproject.toml
ABIs/: ERC20_ABI.json  HODLMONSTERNFT_ABI.json  HODLMONSTER_ABI.json
contracts/: HodlMonster.sol  HodlMonsterNFT.sol  Multicall3.sol  monstercoin.sol
static/: app.js  style.css
templates/: index.html
